--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ body {
   text-align: center;
   background: #f8f8f8;
 }
+#score {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #776e65;
+  margin-top: 10px;
+}
